--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ django-environ = "^0.4.5"
 django-registration-redux = "^2.8"
 
 [tool.poetry.dev-dependencies]
+pylint = "^2.5.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
